kubernetes/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-green
  namespace: blue-green
spec:
  selector:
    matchLabels:
      version: Green
  replicas: 2
  template:
    metadata:
      labels:
        version: Green
    spec:
      containers:
        - name: sample-service
          image: local-dtr.com/springboot-kube-sample:Green
          ports:
            - containerPort: 8080
