kubernetes/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
  namespace: blue-green
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    version: Green
  sessionAffinity: None
